<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:attr/windowBackground">

    <fragment
        android:id="@+id/backArrowFragment"
        android:name="com.example.globetrotters.fragments.BackArrowFragment"
        android:layout_width="@dimen/settings_backArrow_dimens"
        android:layout_height="@dimen/settings_backArrow_dimens" />

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_title_marginBottom"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/settings_titleSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/permissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_permissionsButton"
        android:layout_marginTop="@dimen/settings_buttonPermission_marginTop"
        android:gravity="center"/>

    <!-- Sezione Versione dell'app -->
    <TextView
        android:id="@+id/version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_app_version"
        android:textSize="@dimen/settings_app_version_textSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/settings_app_version_marginTop"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_version_number"
        android:textSize="@dimen/settings_version_number_textSize"
        android:layout_marginTop="@dimen/settings_version_number_marginTop"
        android:gravity="center"
        android:textColor="?android:attr/textColorSecondary"/>

    <!-- Sezione Condivisione e Feedback -->
    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_SendToFriends"
        android:layout_marginTop="@dimen/settings_Buttons_MargintTop"
        android:gravity="center"/>

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_FeedbackAndSupport"
        android:layout_marginTop="@dimen/settings_Buttons_MargintTop"
        android:gravity="center"/>

</LinearLayout>