<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Intestazione: back-arrow a sinistra, titolo centrato nella schermata -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gallery_navHeight"
        android:padding="@dimen/gallery_navPadding">

        <!-- Back arrow ancorata a sinistra -->
        <fragment
            android:id="@+id/backArrowFragment"
            android:name="com.example.globetrotters.fragments.BackArrowFragment"
            android:layout_width="@dimen/gallery_backArrow_dimens"
            android:layout_height="@dimen/gallery_backArrow_dimens"
            android:layout_gravity="start|center_vertical" />

        <!-- Titolo centrato orizzontalmente -->
        <TextView
            android:id="@+id/galleryTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gallery_title"
            android:textSize="@dimen/gallery_titleTextSize"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <!-- Icona cestino e messaggio -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/gallery_binMessage_padding"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/galleryDeleteIcon"
            android:layout_width="@dimen/gallery_binIcon_dimens"
            android:layout_height="@dimen/gallery_binIcon_dimens"
            android:src="@drawable/bin_icon"
            android:contentDescription="@string/gallery_deletePhoto"
            android:layout_marginStart="@dimen/gallery_binIcon_MarginStart"
            app:tint="@android:color/black" />

        <TextView
            android:id="@+id/galleryDeleteModeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gallery_deleteMessage_MarginStart"
            android:gravity="center_vertical"
            android:text="@string/gallery_deleteMessage"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/galleryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gallery_RecyclerView_Height"
        android:layout_weight="1"/>
</LinearLayout>
