<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@android:color/white"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/add_travel_padding">

        <!-- Freccia Indietro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/backArrowFragment"
                android:name="com.example.globetrotters.fragments.BackArrowFragment"
                android:layout_width="@dimen/add_backArrow_dimens"
                android:layout_height="@dimen/add_backArrow_dimens" />

            <Button
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aggiungi Posizione"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:background="@color/black"
                android:textColor="@android:color/white"
                android:elevation="4dp" />

        </LinearLayout>

        <!-- Titolo Vacanza -->
        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/add_title_min_height"
            android:hint="@string/dialog_chooseTitle"
            android:paddingVertical="@dimen/add_title_paddingVertical" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <fragment
                android:id="@+id/photoFragment"
                android:name="com.example.globetrotters.fragments.PhotoFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <fragment
                android:id="@+id/dateFragment"
                android:name="com.example.globetrotters.fragments.DateFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Messaggio di errore -->
        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_errorMessage"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:paddingTop="@dimen/add_error_message_Paddingtop"
            android:textAlignment="center" />

        <!-- Bottone Crea -->
        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_createButton"
            android:textColor="@android:color/white"
            android:background="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/add_createButton_marginTop"
            android:layout_marginBottom="@dimen/add_createButton_marginBottom"
            android:padding="@dimen/add_createButton_padding"
            android:elevation="@dimen/add_createButton_elevation" />

    </LinearLayout>
</ScrollView>